# Learning-from-Data

PyTorch/HuggingFace/Datasets_Library/: local_remote_datasets.py
PyTorch/HuggingFace/Finetuning_pretrained_models/: finetune_pretrained_from_hf_hub.py
PyTorch/basics/: simple_fullyconnectednet.py  tensor_math.py  test.py  transformer.py
PyTorch/machine_translation_transformers/: machine_translation.py
PyTorch/machine_translation_transformers.py/: machine_translation_transformer_pytorch.py  utils.py
PyTorch/torchtext/: Torchtext_custom_datasets_loadingJSON_CSV_TSV.py
transformers/RLHF_ibm_granite_7b/: RLHF_reward_model_training_HH_RLHF_dataset.ipynb
transformers/fine_tuning/: LoRA_classification_hf_trainer_mixed_precision.ipynb  granite_7b_fine_tune_sentiment_8bit_trainer_api.ipynb  granite_7b_fine_tune_sentiment_full_training_loop_4bit.ipynb  granite_7b_finetune_causalLM_4bit(1).ipynb  granite_7b_finetune_causalLM_4bit.ipynb
transformers/fine_tuning/RLHF/: RLHF_reward_model_training_LoRA.ipynb  RLHF_reward_model_training_hh_rlhf_dataset_ibm_granite_final.ipynb  RLHF_training.py  pyproject.toml
