[tool.poetry]
name = "rlhf stackexchange"
version = "0.1.0"
description = ""
authors = ["Anantvir"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.4.1"
accelerate = "^0.34.2"
datasets = "^3.0.0"
peft = "^0.12.0"
tqdm = "^4.66.5"
transformers = "^4.44.2"
trl = "^0.11.0"
pandas = "^2.2.3"
pyyaml = "^6.0.2"
pyarrow = "^17.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
